--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,6 +56,9 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-black {
+    background: #000 !important;
+}
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
