--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,6 +46,7 @@
                         <small class="ml-3">
                             <a href="{% url 'edit_product' product.id %}">Edit</a> |
                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+{#                        TODO: add confirmation on delete#}
                         </small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
